kubernetes/_client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: krateo-remote-client
  name: krateo-remote-client
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: krateo-remote-client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: krateo-remote-client
    spec:
      hostIPC: true
      hostNetwork: true
      hostPID: true
      containers:
        - image: app-client
          imagePullPolicy: IfNotPresent
          name: krateo-remote-client
          volumeMounts:
            - mountPath: /host
              name: noderoot
          securityContext:
            privileged: true
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              memory: '64Mi'
              cpu: '20m'
      volumes:
        - name: noderoot
          hostPath:
            path: /
