kubernetes/army-knife.yaml
apiVersion: v1
kind: Pod
metadata:
  name: krateo-army-knife
  namespace: remote
spec:
  containers:
    - name: krateo-army-knife
      image: ghcr.io/krateoplatformops/krateo-army-knife:latest
      resources:
        limits:
          cpu: 20m
          memory: 32Mi
