kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krateo-remote-server
spec:
  selector:
    app: krateo-remote-server
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
